--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div class="todoapp" id="root"></div>
-<sctipt src="/static/bundle.js"></sctipt>
+<script src="/static/bundle.js"></script>
 </body>
 </html>
